[package]
name = "spark-rust-sdk-examples"
version = "0.4.3"
edition = "2021"
authors = ["ComposabilityLabs"]
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.66.9", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
spark-market-sdk = { version = "0.6.2" }
spark-registry-sdk = { version = "0.6.2" }

anyhow = "1.0.89"
dotenv = "0.15.0"
serde = "1.0.210"
rand = "0.8.5"
