[package]
name = "spark-rust-sdk-examples"
version = "0.4.4"
edition = "2021"
authors = ["ComposabilityLabs"]
license = "Apache-2.0"
rust-version = "1.82"

[dependencies]
fuels = { version = "0.66.9" }
# fuel-core = "0.40.0"

tokio = { version = "1.12", features = ["rt", "macros"] }
spark-market-sdk = { git = "https://github.com/compolabs/orderbook-contract", branch = "master", package = "spark-market-sdk" }
spark-registry-sdk = { git = "https://github.com/compolabs/orderbook-contract", branch = "master", package = "spark-registry-sdk" }


anyhow = "1.0.89"
dotenv = "0.15.0"
serde = "1.0.210"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
rand_distr = "0.4"
hex = "0.4" 
